force-app/main/default/objects/Master_Product_Plan_Code__c/Master_Product_Plan_Code__c.object-meta.xml
<CustomObject>
    <label>Master Product Plan Code</label>
    <nameField>
        <label>Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Product Plan Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>