force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individu</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>