force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Generate_Hardcopy__c.field-meta.xml
<CustomField>
    <fullName>Generate_Hardcopy__c</fullName>
    <label>Generate Hardcopy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>