force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Jenis Asuransi</description>
    <inlineHelpText>digunakan untuk membedakan transaksi MJK, MSK, MKP, MKO, MKG</inlineHelpText>
    <label>Jenis Asuransi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>