force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group__c</fullName>
    <inlineHelpText>digunakan untuk membedakan group konvensional atau syariah</inlineHelpText>
    <label>Parent Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Konvensional</fullName>
            </value>
            <value>
                <fullName>Syariah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>