force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Plan_DMTM__c.field-meta.xml
<CustomField>
    <fullName>Plan_DMTM__c</fullName>
    <label>Plan DMTM</label>
    <type>TextArea</type>
</CustomField>