force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Policy_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Policy_Prefix__c</fullName>
    <label>Policy Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>