force-app/main/default/objects/Master_Product_Plan_Code__c/fields/Riders__c.field-meta.xml
<CustomField>
    <fullName>Riders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>sebagai flag produk riders -&gt; digunakan untuk transaksi perubahan data pertanggungan</inlineHelpText>
    <label>Riders</label>
    <type>Checkbox</type>
</CustomField>