force-app/main/default/objects/Master_Product_Plan_Code__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RLS</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>