force-app/main/default/objects/Master_Product_Plan_Code__c/fields/System_Channel_Distribution__c.field-meta.xml
<CustomField>
    <fullName>System_Channel_Distribution__c</fullName>
    <label>System Channel Distribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>