force-app/main/default/objects/Master_Product_Plan_Code__c/recordTypes/DMTM.recordType-meta.xml
<RecordType>
    <fullName>DMTM</fullName>
    <active>true</active>
    <label>DMTM</label>
</RecordType>