force-app/main/default/objects/Master_Product_Plan_Code__c/recordTypes/RLS.recordType-meta.xml
<RecordType>
    <fullName>RLS</fullName>
    <active>true</active>
    <label>RLS</label>
</RecordType>